@@ -1,13 +1,15 @@
 package com.rokue.game.states;
 
+import java.util.List;
+
 import com.rokue.game.GameSystem;
+import com.rokue.game.GameTimer;
+import com.rokue.game.actions.IAction;
+import com.rokue.game.actions.MoveAction;
 import com.rokue.game.entities.Hall;
 import com.rokue.game.entities.Hero;
-import com.rokue.game.GameTimer;
 import com.rokue.game.events.EventManager;
 import com.rokue.game.util.Position;
-
-import java.util.List;
 
 public class PlayMode implements GameState {
 
@@ -22,18 +24,16 @@ public class PlayMode implements GameState {
 
     public PlayMode(List<Hall> halls, Hero hero, EventManager eventManager) {
         this.halls = halls;
-        this.currentHall = halls.getFirst();
+        this.currentHall = halls.get(0);
         this.hero = hero;
         this.eventManager = eventManager;
-        this.gameTimer = new GameTimer(eventManager);
     }
 
     public void enter(GameSystem system) {
         System.out.println("Entering Play Mode");
+        this.gameTimer = new GameTimer(eventManager);
         this.gameTimer.start(PlayMode.START_TIME);
 
-        eventManager.subscribe("TIMER_TICK", (eventType, data) -> onTimerTick((int) data));
-        eventManager.subscribe("TIME_EXPIRED", (eventType, data) -> onTimeExpired());
         eventManager.subscribe("RUNE_COLLECTED", (eventType, data) -> onRuneCollected());
     }
 
@@ -43,18 +43,19 @@ public class PlayMode implements GameState {
 
     public void exit(GameSystem system) {
         System.out.println("Exiting Play Mode");
-        gameTimer.stop();
-        eventManager.unsubscribe("TIMER_TICK", null);
-        eventManager.unsubscribe("TIME_EXPIRED", null);
+        if (gameTimer != null) {
+            gameTimer.stop();
+        }
         eventManager.unsubscribe("RUNE_COLLECTED", null);
     }
 
-    private void onTimerTick(int remainingTime) {
-        System.out.println("Time remaining: " + remainingTime + " seconds");
-    }
-
-    private void onTimeExpired() {
-        System.out.println("Time's up! Game Over!");
+    public void handleActions(List<IAction> actions) {
+        for (IAction action : actions) {
+            if (action instanceof MoveAction) {
+                MoveAction moveAction = (MoveAction) action;
+                this.hero.move(moveAction.getDirection(), this.currentHall);
+            }
+        }
     }
 
     private void onRuneCollected() {
@@ -65,8 +66,9 @@ public class PlayMode implements GameState {
             currentHall = halls.get(nextHallIndex);
             System.out.println("Moving to the next hall: " + currentHall.getName());
             gameTimer.start(PlayMode.START_TIME);
-            hero.move(PlayMode.START_POSITION);
+            hero.setPosition(PlayMode.START_POSITION);
         } else {
+            eventManager.notify("GAME_COMPLETED", null);
             System.out.println("All halls completed. You win!");
         }
     }
